[tool.poetry]
name = "ume"
version = "0.1.1"
description = "Unique Meme Engine."
authors = ["isik-kaplan <isik.kaplan@outlook.com>"]

license = "MIT"
readme = "README.md"

homepage = "https://github.com/wsd/ume"
repository = "https://github.com/wsd/ume"
documentation = "https://github.com/wsd/ume"

keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^3.7.0"
wheel = "^0.37.1"
pytesseract = "^0.3.10"
ImageHash = "^4.3.0"
sewar = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
